# modern-cpp-design

./: .gitignore  CMakeLists.txt  README.md
include/afmalloc/: AfMalloc.hpp  afmalloc.hpp
include/modern_cpp_design/allocators/: chunk_allocator.hpp  memory_pool_allocator.hpp  page_size_allocator.hpp  type_aware_allocator.hpp
include/modern_cpp_design/smart_pointer/: smart_pointer.hpp
include/modern_cpp_design/typelists/: typelists.hpp
src/: CMakeLists.txt  afmalloc_playground.cpp  custom_allocator.cpp  main.cpp  malloc_playground.cpp  page_size_allocator.cpp  smart_pointer.cpp  typelists.cpp
src/allocation/: CMakeLists.txt  custom_allocator.cpp
src/allocators/: AfMalloc.cpp  CMakeLists.txt  afmalloc.cpp  memory_pool_allocator.cpp  page_size_allocator.cpp
src/smart_pointer/: CMakeLists.txt  smart_pointer.cpp
tests/: CMakeLists.txt  test_afmalloc.cpp  test_chunk_allocator.cpp  test_memory_pool_allocator.cpp  test_page_allocator.cpp
